PAAS-1: Added template/view for signing up if your pun is not available

--- a/index.html
+++ b/index.html
@@ -15,13 +15,31 @@
 </div>
 
 <h1>Get it here!</h1>
+
 <p>
 Not <i>it</i> that is, but rather...puns!
+Give us a subject and we'll give you a pun
 </p>
+
+<h3>Try it now...</h3>
+
+<div class="panel-body">
+  <form class="navbar-form navbar-left" role="search">
+    <div class="form-group">
+      <input type="text" class="form-control" placeholder="eggs">
+    </div>
+    <button type="submit" class="btn btn-default">Pun Please</button>
+  </form>
+</div>
+
 <h1>REST API</h1>
+<p>
+Of course, if it's SaaS it's all about teh API.  
+</p>
 <p>
 Simply ask for a pun on any given subject, for example eggs:
 </p>
+
 <h2>dadjokes.org/pun/eggs</h2>
 
 <p>
@@ -35,7 +53,7 @@ And you'll get back a Dad Jokes quality pun:
 </div>
 
 <p>
-I know!
+I know it is!
 </p>
 
 <h3>Want some JSON with that sir?</h3>
