PAAS-1: Added Json King joke, apache config for proxying to node plus some mods to the mail chimp sign up form

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@ Yields:
 <p>
 Say you want a pun for say, goats, but we haven't thought of one one yet?
 
-Don't worry, take a ticket and we'll let you know when your pun is ready...
+Don't worry, take a ticket and we'll let you know when your pun is ready via our <a href="http://mailchimp.com/">Mail Chimp</a> facilitated asynchronous fullfilment capability (AKA Mailing List).
 </p>
 
 </div>
