--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <html>
   <head>
+    <title>Puns as a Service (PaaS) brought to you by dadjokes</title>
 <!-- Latest compiled and minified CSS -->
 <link rel="stylesheet" href="//netdna.bootstrapcdn.com/bootstrap/3.0.2/css/bootstrap.min.css">
 
@@ -13,73 +14,73 @@
   <small>puns as a service</small>
   </h1>
 </div>
+<div class="content">
+  <h1>Get it here!</h1>
 
-<h1>Get it here!</h1>
+  <p>
+  Not <i>it</i> that is, but rather...puns!
+  Give us a subject and we'll give you a pun
+  </p>
 
-<p>
-Not <i>it</i> that is, but rather...puns!
-Give us a subject and we'll give you a pun
-</p>
+  <h3>Try it now...</h3>
 
-<h3>Try it now...</h3>
-
-<div class="panel-body">
-  <form class="navbar-form navbar-left" role="search">
-    <div class="form-group">
-      <input type="text" class="form-control" placeholder="eggs">
-    </div>
-    <button type="submit" class="btn btn-default">Pun Please</button>
-  </form>
-</div>
-
-<h1>REST API</h1>
-<p>
-Of course, if it's SaaS it's all about teh API.  
-</p>
-<p>
-Simply ask for a pun on any given subject, for example eggs:
-</p>
-
-<h2>dadjokes.org/pun/eggs</h2>
-
-<p>
-And you'll get back a Dad Jokes quality pun:
-</p>
-
-<div class="panel panel-default">
   <div class="panel-body">
-    That's eggcellent!
+    <form class="navbar-form navbar-left" role="search">
+      <div class="form-group">
+        <input type="text" class="form-control" placeholder="eggs">
+      </div>
+      <button type="submit" class="btn btn-default">Pun Please</button>
+    </form>
   </div>
+
+  <h1>REST API</h1>
+  <p>
+  Of course, if it's SaaS it's all about teh API.  
+  </p>
+  <p>
+  Simply ask for a pun on any given subject, for example eggs:
+  </p>
+
+  <h2>dadjokes.org/pun/eggs</h2>
+
+  <p>
+  And you'll get back a Dad Jokes quality pun:
+  </p>
+
+  <div class="panel panel-default">
+    <div class="panel-body">
+      That's eggcellent!
+    </div>
+  </div>
+
+  <p>
+  I know it is!
+  </p>
+
+  <h3>Want some JSON with that sir?</h3>
+
+  <p>
+  But we don't just has text, need puns in your apps? REST easy, you'll be the <a href="json-king">JSON King</a> with our JavaScipts flavour response
+  </p>
+
+  <h2>dadjokes.org/pun/eggs/json</h2>
+  <p>
+  Yields:
+  </p>
+  <pre class="prettyprint">
+  {
+      "subject": "eggs",
+      "pun": "That's eggcellent!"
+  }
+  </pre>
+
+  <h1>What if we don't has it?</h1>
+  <p>
+  Say you want a pun for say, goats, but we haven't thought of one one yet?
+
+  Don't worry, take a ticket and we'll let you know when your pun is ready via our <a href="http://mailchimp.com/">Mail Chimp</a> facilitated asynchronous fullfilment capability (AKA Mailing List).
+  </p>
 </div>
-
-<p>
-I know it is!
-</p>
-
-<h3>Want some JSON with that sir?</h3>
-
-<p>
-But we don't just has text, need puns in your apps? REST easy, you'll be the <a href="json-king">JSON King</a> with our JavaScipts flavour response
-</p>
-
-<h2>dadjokes.org/pun/eggs/json</h2>
-<p>
-Yields:
-</p>
-<pre class="prettyprint">
-{
-    "subject": "eggs",
-    "pun": "That's eggcellent!"
-}
-</pre>
-
-<h1>What if we don't has it?</h1>
-<p>
-Say you want a pun for say, goats, but we haven't thought of one one yet?
-
-Don't worry, take a ticket and we'll let you know when your pun is ready via our <a href="http://mailchimp.com/">Mail Chimp</a> facilitated asynchronous fullfilment capability (AKA Mailing List).
-</p>
-
 </div>
 <script src="http://code.jquery.com/jquery-1.10.1.min.js"></script>
 <!-- Latest compiled and minified JavaScript -->
